Configured Load Balancer using the RestTemplate