@@ -1,6 +1,5 @@
 package com.my.user.service.services.impl;
 
-import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.UUID;
@@ -9,6 +8,7 @@ import java.util.stream.Collectors;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
+import org.springframework.web.client.RestClientException;
 import org.springframework.web.client.RestTemplate;
 
 import com.my.user.service.entities.Hotel;
@@ -18,7 +18,10 @@ import com.my.user.service.exceptions.ResourceNotFoundException;
 import com.my.user.service.repositories.UserRepository;
 import com.my.user.service.services.UserService;
 
+import lombok.extern.slf4j.Slf4j;
+
 @Service
+@Slf4j
 public class UserServiceImpl implements UserService {
 
     @Autowired
@@ -29,16 +32,14 @@ public class UserServiceImpl implements UserService {
 
     @Override
     public User createUser(User user) {
-
-        // generate unique user id
-        String randomUserId = UUID.randomUUID().toString();
-        user.setUserId(randomUserId);
+        // Generate unique user ID
+        user.setUserId(UUID.randomUUID().toString());
         return userRepository.save(user);
     }
 
+    @Override
     public List<User> createMultipleUsers(List<User> users) {
-        List<User> usersList = users.stream().map(user -> createUser(user)).toList();
-        return usersList;
+        return users.stream().map(this::createUser).collect(Collectors.toList());
     }
 
     @Override
@@ -48,36 +49,29 @@ public class UserServiceImpl implements UserService {
 
     @Override
     public void deleteUser(String userId) {
+        userRepository.findById(userId).orElseThrow(
+                () -> new ResourceNotFoundException("User not found for id: " + userId));
         userRepository.deleteById(userId);
     }
 
-    @SuppressWarnings("unchecked")
     @Override
     public User getUser(String userId) {
         User user = userRepository.findById(userId).orElseThrow(
-                () -> new ResourceNotFoundException("User not found on server. for this id: " + userId));
-        // Fetch Ratings of the User from the RATING-SERVICE using Rating Service API
-        // through REST Template
-        // /rating/user/{userId}
-        String ratingsUrl = "http://localhost:8083/rating/user/" + userId;
-        Rating[] ratingOfUser = restTemplate.getForObject(ratingsUrl, Rating[].class);
+                () -> new ResourceNotFoundException("User not found for id: " + userId));
 
-        List<Rating> ratings = Arrays.stream(ratingOfUser).toList();
+        try {
+            // Fetch ratings from RATING-SERVICE
+            String ratingsUrl = "http://RATING-SERVICE/rating/user/" + userId;
+            Rating[] ratingOfUser = restTemplate.getForObject(ratingsUrl, Rating[].class);
 
-        List<Rating> ratingList = ratings.stream().map(rating -> {
-            // Fetch Hotel Details of the User from the HOTEL-SERVICE using Rating Service
-            // API
-            // through REST Template
-            // /rating/hotels/{hotelId}
-            String hotelUrl = "http://localhost:8082/hotels/" + rating.getHotelId();
-            ResponseEntity<Hotel> hotelData = restTemplate.getForEntity(hotelUrl, Hotel.class);
-            Hotel hotel = hotelData.getBody();
-            rating.setHotel(hotel);
-            return rating;
-        }).collect(Collectors.toList());
-
-        if (ratingList != null) {
-            user.setRatings(ratingList);
+            if (ratingOfUser != null) {
+                List<Rating> ratingList = Arrays.stream(ratingOfUser)
+                        .map(this::fetchHotelDetailsForRating) // Extracting hotel details
+                        .collect(Collectors.toList());
+                user.setRatings(ratingList);
+            }
+        } catch (RestClientException e) {
+            log.error("Error while fetching ratings for userId: {}", userId, e);
         }
 
         return user;
@@ -86,17 +80,39 @@ public class UserServiceImpl implements UserService {
     @Override
     public List<User> getAllUsers() {
         List<User> users = userRepository.findAll();
-        // Fetch Ratings of the User from the RATING-SERVICE using Rating Service API
-        // through REST Template
-        // /rating/user/{userId}
+
         users.forEach(user -> {
-            String ratingsUrl = "http://localhost:8083/rating/user/" + user.getUserId();
-            ArrayList<Rating> ratingOfUser = restTemplate.getForObject(ratingsUrl, ArrayList.class);
-            if (ratingOfUser != null) {
-                user.setRatings(ratingOfUser);
+            try {
+                // Fetch ratings from RATING-SERVICE
+                String ratingsUrl = "http://RATING-SERVICE/rating/user/" + user.getUserId();
+                Rating[] ratingOfUser = restTemplate.getForObject(ratingsUrl, Rating[].class);
+
+                if (ratingOfUser != null) {
+                    List<Rating> ratingList = Arrays.stream(ratingOfUser)
+                            .map(this::fetchHotelDetailsForRating)
+                            .collect(Collectors.toList());
+                    user.setRatings(ratingList);
+                }
+            } catch (RestClientException e) {
+                log.error("Error while fetching ratings for userId: {}", user.getUserId(), e);
             }
         });
+
         return users;
     }
 
+    /**
+     * Fetches hotel details for a given rating and attaches it to the rating.
+     */
+    private Rating fetchHotelDetailsForRating(Rating rating) {
+        try {
+            String hotelUrl = "http://HOTEL-SERVICE/hotels/" + rating.getHotelId();
+            ResponseEntity<Hotel> hotelData = restTemplate.getForEntity(hotelUrl, Hotel.class);
+            Hotel hotel = hotelData.getBody();
+            rating.setHotel(hotel);
+        } catch (RestClientException e) {
+            log.error("Error while fetching hotel details for hotelId: {}", rating.getHotelId(), e);
+        }
+        return rating;
+    }
 }
